add grammer to GUI

--- a/AntlrLab3BGUI - Students/nbproject/private/private.properties
+++ b/AntlrLab3BGUI - Students/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jar=true
 file.reference.rsyntaxtextarea-2.5.0.jar=C:\\Users\\McQueen\\Downloads\\rsyntaxtextarea-2.5.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\McQueen\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\Ahmed\\AppData\\Roaming\\NetBeans\\21\\build.properties
